# skim

./: .clang-format  README.md  maidfile.toml  meson.build  skim.h
include/: ast.h  skim_internal.h  syntax.h
src/: ast.c  emit.c  emit_fast.c  lexer.c  module_markers.c  parser.c  scan.c  skim.c  transform.c
src/typescript/: annotations.c  class.c  enum.c  module.c  namespace.c
tests/: bench_perf.cjs  context.c  normalize.cjs  run.cjs  run_all.cjs  run_oxc_suite.cjs  run_ts_suite.cjs  support.cjs
tests/fixtures/: annotations.ts  class_modifiers.ts  decorated_async.ts  enum.ts  enum_refs.ts  export_named.ts  generics.ts  import_equals.cjs.ts  import_object_property.ts  mixed_default_import.ts  mixed_default_mod.mjs  mixed_import.ts  mixed_mod.mjs  namespace.ts  namespace_exports.ts  non_null_optional.ts  object_property_mod.mjs  object_property_modifier.ts  parameter_property.ts  parameter_property_super.ts
tools/: skim.c
